# tanky

./: .gitignore  .releaserc.json  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
.github/workflows/: release-cli.yml  release-menubar-macos.yml  release.yml  test-code.yml
apps/cli/: README.md  package.json  tsup.config.ts
apps/cli/src/: index.test.ts  index.ts
apps/menubar-macos/: README.md  index.html  package.json  vite.config.ts
apps/menubar-macos/src/: App.tsx  styles.css
apps/menubar-macos/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/menubar-macos/src-tauri/capabilities/: default.json
apps/menubar-macos/src-tauri/src/: lib.rs  location.rs  main.rs  panel.rs
apps/menubar-macos/src/app/: AppShell.tsx
apps/menubar-macos/src/components/icons/: MapPinIcon.tsx  NavIcons.tsx  RefreshIcon.tsx  SettingsIcon.tsx  StarIcon.tsx  TrophyIcon.tsx  index.ts
apps/menubar-macos/src/config/: defaultConfig.ts
apps/menubar-macos/src/hooks/: useBestPrice.ts  useNearestStations.ts
apps/menubar-macos/src/lib/: providerRegistry.ts  tankySdk.ts
apps/menubar-macos/src/views/: BestView.tsx  NearbyView.tsx  SettingsView.tsx
scripts/: verify-cli-package.mjs
