[package]
name = "tanky-menubar-macos"
version = "0.1.0"
description = "Tanky menubar application"
authors = ["Tanky"]
edition = "2021"

[lib]
name = "tanky_menubar_macos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "0.3"
